# shopback-homework

./: .travis.yml  README.md  description.txt  output.txt  output2.txt  package-lock.json  package.json  pyproject.toml
project/question1/: README.md  main.py  news.rss
project/question2/: README.md  main.py  output.npy
tests/: test_main.py
