[tool.poetry]
name = "shopback"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
UdicOpenData = "^2.4"
sklearn = "^0.0"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.770"
black = "^19.10b0"
pytest-cov = "^2.8.1"
isort = "^4.3.21"
safety = "^1.8.7"
bandit = "^1.6.2"
